feat: implement field validation, exception handle and answer quiz method